# JRtplibLinker

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/banma/jrtpliblinker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/banma/jrtpliblinker/: MainActivity.kt
app/src/main/java/com/banma/jrtpliblinker/helper/: Constants.java  IpCameraHelper.java  RtpHandle.java  RtpListener.java
app/src/main/java/com/banma/jrtpliblinker/reveive/: ReceiveActivity.kt
app/src/main/java/com/banma/jrtpliblinker/rtsp/: IEvent.java  RTSPClient.java  RtspEventListener.java  RtspStatus.java
app/src/main/java/com/banma/jrtpliblinker/util/: H264Util.java  LogUtil.java  NetworkUtil.java
app/src/main/jni/: MyOutStreamBuffer.h
app/src/main/jni/rtphelper/: RtpCommon.h  RtpHandle.cpp  RtpReceiver.cpp  RtpReceiver.h  RtpSender.cpp  RtpSender.h
app/src/main/res/layout/: activity_main.xml  activity_receive.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/banma/jrtpliblinker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
